Video textures not updating in Cycles renders when using persistent data #92980

Closed
opened 2021-11-10 05:08:10 +01:00 by Daniel Salazar · 13 comments
Member

System Information
Operating system: Linux-5.13.0-7620-generic-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.82.00

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-09 23:23, hash: aa440923c8

Short description of error
Video textures do not update correct frame in render time in cycles when using Persistent Data

Exact steps for others to reproduce the error
Extract the following
Video Texture.zip
Set viewport shading to Rendered
See how the video clip updates
Now render an animation (it will render out really fast)
Check the generated test.mp4 video file
The video is not shown in the polygon
Disable persistent data in the render settings for it to work correctly

Note: clip is creative commons from the Minutephysics Youtube channel

**System Information** Operating system: Linux-5.13.0-7620-generic-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.82.00 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-09 23:23, hash: `aa440923c8` **Short description of error** Video textures do not update correct frame in render time in cycles when using Persistent Data **Exact steps for others to reproduce the error** Extract the following [Video Texture.zip](https://archive.blender.org/developer/F11780038/Video_Texture.zip) Set viewport shading to *Rendered* See how the video clip updates Now render an animation (it will render out really fast) Check the generated test.mp4 video file The video is not shown in the polygon Disable persistent data in the render settings for it to work correctly Note: clip is creative commons from the Minutephysics Youtube channel
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

#95722 was marked as duplicate of this issue

#95722 was marked as duplicate of this issue

Added subscriber: @aisatan.ne

Added subscriber: @aisatan.ne

I have the same issue.

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-10 21:43, hash: 22ffd69a91

I have the same issue. **System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-10 21:43, hash: `22ffd69a91`

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report. I can confirm.
One thing I also noticed is that the image doesn't update in Viewport. But this may not be related.
(I couldn't open (or append) the file in older Blender versions in order to test regression)

Thanks for the report. I can confirm. One thing I also noticed is that the image doesn't update in Viewport. But this may not be related. (I couldn't open (or append) the file in older Blender versions in order to test regression)
Author
Member

In #92980#1252920, @mano-wii wrote:
Thanks for the report. I can confirm.
One thing I also noticed is that the image doesn't update in Viewport. But this may not be related.
(I couldn't open (or append) the file in older Blender versions in order to test regression)

Open the file in 3.X, save as uncompressed, open in 2.X

> In #92980#1252920, @mano-wii wrote: > Thanks for the report. I can confirm. > One thing I also noticed is that the image doesn't update in Viewport. But this may not be related. > (I couldn't open (or append) the file in older Blender versions in order to test regression) Open the file in 3.X, save as uncompressed, open in 2.X

Added subscriber: @brecht

Added subscriber: @brecht

Marking a few bugs as high priority with the aim of fixing them for 3.1.

Marking a few bugs as high priority with the aim of fixing them for 3.1.
Author
Member

Added subscribers: @Peter-Sampson, @PratikPB2123

Added subscribers: @Peter-Sampson, @PratikPB2123

This issue was referenced by 8322a4f6b7

This issue was referenced by 8322a4f6b76960cb4983f8aaf5a74e694aed1384

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-03-01 19:52:00 +01:00
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:08 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92980
No description provided.