Fix T92980: missing Cycles video texture update with persistent data